tests/errors/insufficient-params.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";
import "primitives/binary_operators.futil";
component main() -> () {
  cells {
    d = std_fp_div_pipe(32);
  }
  wires {}
  control {}
}
